Bug 270209 - konqueror unexcpetly crash on Drupal Website
Summary: konqueror unexcpetly crash on Drupal Website
Status: RESOLVED FIXED
Alias: None
Product: kdelibs
Classification: Unmaintained
Component: kdewebkit (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: ---
Assignee: webkit-bugs-null
URL:
Keywords:
: 275317 278926 281150 284573 286287 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-04-06 11:57 UTC by Vincent-Xavier JUMEL
Modified: 2011-11-10 23:47 UTC (History)
7 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.7.3
Sentry Crash Report:


Attachments
New crash information added by DrKonqi (8.13 KB, text/plain)
2011-06-13 09:41 UTC, Andrei Slavoiu
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Vincent-Xavier JUMEL 2011-04-06 11:57:15 UTC
Application: konqueror (4.6.1 (4.6.1))
KDE Platform Version: 4.6.1 (4.6.1) (Compiled from sources)
Qt Version: 4.7.2
Operating System: Linux 2.6.38-gentoo-r1 x86_64
Distribution: "Gentoo Base System release 2.0.2"

-- Information about the crash:
- What I was doing when the application crashed:
Browsing a Drupal Website : http://www.april.org

- Custom settings of the application:
HTML rendered is kwebkitpart, javascript enabled

The crash does not seem to be reproducible.

-- Backtrace:
Application: Konqueror (kdeinit4), signal: Segmentation fault
[Current thread is 1 (Thread 0x7f6402dd0760 (LWP 1918))]

Thread 6 (Thread 0x7f63eb113700 (LWP 1919)):
#0  pthread_cond_wait () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:162
#1  0x00007f63f70e1a8c in scavengerThread (context=0x7f63f7950f20) at wtf/FastMalloc.cpp:2378
#2  WTF::TCMalloc_PageHeap::runScavengerThread (context=0x7f63f7950f20) at wtf/FastMalloc.cpp:1497
#3  0x00007f64016a3d6c in start_thread (arg=0x7f63eb113700) at pthread_create.c:301
#4  0x00007f64003fc40d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:115

Thread 5 (Thread 0x7f63e7514700 (LWP 1921)):
#0  pthread_cond_timedwait () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_timedwait.S:216
#1  0x00007f6401934dbd in wait (this=<value optimized out>, mutex=0x1544230, time=30000) at thread/qwaitcondition_unix.cpp:86
#2  QWaitCondition::wait (this=<value optimized out>, mutex=0x1544230, time=30000) at thread/qwaitcondition_unix.cpp:160
#3  0x00007f640192963f in QThreadPoolThread::run (this=0xc61a80) at concurrent/qthreadpool.cpp:140
#4  0x00007f64019347c5 in QThreadPrivate::start (arg=0xc61a80) at thread/qthread_unix.cpp:320
#5  0x00007f64016a3d6c in start_thread (arg=0x7f63e7514700) at pthread_create.c:301
#6  0x00007f64003fc40d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:115

Thread 4 (Thread 0x7f63e5f11700 (LWP 1927)):
#0  pthread_cond_timedwait () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_timedwait.S:216
#1  0x00007f6401934dbd in wait (this=<value optimized out>, mutex=0x1581510, time=30000) at thread/qwaitcondition_unix.cpp:86
#2  QWaitCondition::wait (this=<value optimized out>, mutex=0x1581510, time=30000) at thread/qwaitcondition_unix.cpp:160
#3  0x00007f640192963f in QThreadPoolThread::run (this=0x15a8c80) at concurrent/qthreadpool.cpp:140
#4  0x00007f64019347c5 in QThreadPrivate::start (arg=0x15a8c80) at thread/qthread_unix.cpp:320
#5  0x00007f64016a3d6c in start_thread (arg=0x7f63e5f11700) at pthread_create.c:301
#6  0x00007f64003fc40d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:115

Thread 3 (Thread 0x7f63e4f0f700 (LWP 1929)):
#0  pthread_cond_timedwait () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_timedwait.S:216
#1  0x00007f6401934dbd in wait (this=<value optimized out>, mutex=0x1581510, time=30000) at thread/qwaitcondition_unix.cpp:86
#2  QWaitCondition::wait (this=<value optimized out>, mutex=0x1581510, time=30000) at thread/qwaitcondition_unix.cpp:160
#3  0x00007f640192963f in QThreadPoolThread::run (this=0x15aa8e0) at concurrent/qthreadpool.cpp:140
#4  0x00007f64019347c5 in QThreadPrivate::start (arg=0x15aa8e0) at thread/qthread_unix.cpp:320
#5  0x00007f64016a3d6c in start_thread (arg=0x7f63e4f0f700) at pthread_create.c:301
#6  0x00007f64003fc40d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:115

Thread 2 (Thread 0x7f63dffff700 (LWP 1930)):
#0  pthread_cond_timedwait () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_timedwait.S:216
#1  0x00007f6401934dbd in wait (this=<value optimized out>, mutex=0x1581510, time=30000) at thread/qwaitcondition_unix.cpp:86
#2  QWaitCondition::wait (this=<value optimized out>, mutex=0x1581510, time=30000) at thread/qwaitcondition_unix.cpp:160
#3  0x00007f640192963f in QThreadPoolThread::run (this=0x181beb0) at concurrent/qthreadpool.cpp:140
#4  0x00007f64019347c5 in QThreadPrivate::start (arg=0x181beb0) at thread/qthread_unix.cpp:320
#5  0x00007f64016a3d6c in start_thread (arg=0x7f63dffff700) at pthread_create.c:301
#6  0x00007f64003fc40d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:115

Thread 1 (Thread 0x7f6402dd0760 (LWP 1918)):
[KCrash Handler]
#6  QUrl::QUrl (this=0x7fff362e6900, other=...) at io/qurl.cpp:4174
#7  0x00007f63f4eca019 in KWebWallet::KWebWalletPrivate::saveDataToCache (this=0xca92b0, key=...) at /var/tmp/portage/kde-base/kdelibs-4.6.1-r2/work/kdelibs-4.6.1/kdewebkit/kwebwallet.cpp:209
#8  0x00007f63f4ecaefb in KWebWallet::saveFormDataToCache (this=0x7c6c30, key=<value optimized out>) at /var/tmp/portage/kde-base/kdelibs-4.6.1-r2/work/kdelibs-4.6.1/kdewebkit/kwebwallet.cpp:549
#9  0x00007f63f4ecb499 in KWebWallet::qt_metacall (this=0x7c6c30, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fff362e6a70) at /var/tmp/portage/kde-base/kdelibs-4.6.1-r2/work/kdelibs-4.6.1_build/kdewebkit/kwebwallet.moc:92
#10 0x00007f6401a3159f in QMetaObject::activate (sender=0xcda550, m=<value optimized out>, local_signal_index=<value optimized out>, argv=0x7fff362e6a70) at kernel/qobject.cpp:3278
#11 0x00007f63eb15c205 in KDEPrivate::PasswordBar::saveFormDataAccepted (this=<value optimized out>, _t1=<value optimized out>) at /var/tmp/portage/kde-misc/kwebkitpart-9999/work/kwebkitpart-9999_build/src/passwordbar.moc:108
#12 0x00007f63eb15c284 in KDEPrivate::PasswordBar::qt_metacall (this=0xcda550, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fff362e6b90) at /var/tmp/portage/kde-misc/kwebkitpart-9999/work/kwebkitpart-9999_build/src/passwordbar.moc:89
#13 0x00007f6401a3159f in QMetaObject::activate (sender=0xcc9b40, m=<value optimized out>, local_signal_index=<value optimized out>, argv=0x7fff362e6b90) at kernel/qobject.cpp:3278
#14 0x00007f6401208bb2 in QAbstractButton::clicked (this=<value optimized out>, _t1=false) at .moc/release-shared/moc_qabstractbutton.cpp:206
#15 0x00007f6400f4f050 in QAbstractButtonPrivate::emitClicked (this=<value optimized out>) at widgets/qabstractbutton.cpp:546
#16 0x00007f6400f505c0 in QAbstractButtonPrivate::click (this=0xec48e0) at widgets/qabstractbutton.cpp:539
#17 0x00007f6400f507ec in QAbstractButton::mouseReleaseEvent (this=0xcc9b40, e=0x7fff362e76b0) at widgets/qabstractbutton.cpp:1121
#18 0x00007f640100b1ea in QToolButton::mouseReleaseEvent (this=<value optimized out>, e=<value optimized out>) at widgets/qtoolbutton.cpp:721
#19 0x00007f6400bdc923 in QWidget::event (this=0xcc9b40, event=0x7fff362e76b0) at kernel/qwidget.cpp:8259
#20 0x00007f6400b8a93c in QApplicationPrivate::notify_helper (this=0x6d5c80, receiver=0xcc9b40, e=0x7fff362e76b0) at kernel/qapplication.cpp:4462
#21 0x00007f6400b8fd14 in QApplication::notify (this=<value optimized out>, receiver=0xcc9b40, e=0x7fff362e76b0) at kernel/qapplication.cpp:4023
#22 0x00007f64027d0ee8 in KApplication::notify (this=0x7fff362e8390, receiver=0xcc9b40, event=0x7fff362e76b0) at /var/tmp/portage/kde-base/kdelibs-4.6.1-r2/work/kdelibs-4.6.1/kdeui/kernel/kapplication.cpp:311
#23 0x00007f6401a1cccb in QCoreApplication::notifyInternal (this=0x7fff362e8390, receiver=0xcc9b40, event=0x7fff362e76b0) at kernel/qcoreapplication.cpp:731
#24 0x00007f6400b8b942 in sendEvent (receiver=0xcc9b40, event=0x7fff362e76b0, alienWidget=0xcc9b40, nativeWidget=0xcda550, buttonDown=0x7f640169a198, lastMouseReceiver=..., spontaneous=true) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:215
#25 QApplicationPrivate::sendMouseEvent (receiver=0xcc9b40, event=0x7fff362e76b0, alienWidget=0xcc9b40, nativeWidget=0xcda550, buttonDown=0x7f640169a198, lastMouseReceiver=..., spontaneous=true) at kernel/qapplication.cpp:3122
#26 0x00007f6400c0b3c0 in QETWidget::translateMouseEvent (this=0xcda550, event=<value optimized out>) at kernel/qapplication_x11.cpp:4461
#27 0x00007f6400c09ac1 in QApplication::x11ProcessEvent (this=0x7fff362e8390, event=0x7fff362e7e60) at kernel/qapplication_x11.cpp:3587
#28 0x00007f6400c30d02 in x11EventSourceDispatch (s=0x6d9a50, callback=0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:146
#29 0x00007f63fd3ed29a in g_main_dispatch (context=0x6d88e0) at gmain.c:2440
#30 g_main_context_dispatch (context=0x6d88e0) at gmain.c:3013
#31 0x00007f63fd3eda78 in g_main_context_iterate (context=0x6d88e0, block=1, dispatch=1, self=<value optimized out>) at gmain.c:3091
#32 0x00007f63fd3edcdf in g_main_context_iteration (context=0x6d88e0, may_block=1) at gmain.c:3154
#33 0x00007f6401a47d3a in QEventDispatcherGlib::processEvents (this=0x613cf0, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:422
#34 0x00007f6400c309c6 in QGuiEventDispatcherGlib::processEvents (this=<value optimized out>, flags=<value optimized out>) at kernel/qguieventdispatcher_glib.cpp:204
#35 0x00007f6401a1c012 in QEventLoop::processEvents (this=<value optimized out>, flags=...) at kernel/qeventloop.cpp:149
#36 0x00007f6401a1c294 in QEventLoop::exec (this=0x7fff362e8160, flags=...) at kernel/qeventloop.cpp:201
#37 0x00007f6401a2077b in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1008
#38 0x00007f63f2732ff9 in kdemain (argc=<value optimized out>, argv=<value optimized out>) at /var/tmp/portage/kde-base/konqueror-4.6.1/work/konqueror-4.6.1/konqueror/src/konqmain.cpp:219
#39 0x00000000004076c6 in launch (argc=2, _name=0x6c64b8 "konqueror", args=<value optimized out>, cwd=0x6c650b "/home/users/endymion/Documents", envc=<value optimized out>, envs=<value optimized out>, reset_env=true, tty=0x0, avoid_loops=false, startup_id_str=0x6c70e8 "0") at /var/tmp/portage/kde-base/kdelibs-4.6.1-r2/work/kdelibs-4.6.1/kinit/kinit.cpp:734
#40 0x00000000004081c8 in handle_launcher_request (sock=<value optimized out>, who=<value optimized out>) at /var/tmp/portage/kde-base/kdelibs-4.6.1-r2/work/kdelibs-4.6.1/kinit/kinit.cpp:1226
#41 0x00000000004089a0 in handle_requests (waitForPid=0) at /var/tmp/portage/kde-base/kdelibs-4.6.1-r2/work/kdelibs-4.6.1/kinit/kinit.cpp:1410
#42 0x000000000040953a in main (argc=4, argv=0x7fff362e9cf8, envp=0x7fff362e9d20) at /var/tmp/portage/kde-base/kdelibs-4.6.1-r2/work/kdelibs-4.6.1/kinit/kinit.cpp:1907

Reported using DrKonqi
Comment 1 Tommi Tervo 2011-06-10 07:52:22 UTC
*** Bug 275317 has been marked as a duplicate of this bug. ***
Comment 2 Andrei Slavoiu 2011-06-13 09:41:00 UTC
Created attachment 60955 [details]
New crash information added by DrKonqi

konqueror (4.6.4 (4.6.4)) on KDE Platform 4.6.4 (4.6.4) using Qt 4.7.3

I logged in to Yahoo mail and when I clicked "remember my password" it crashed.

-- Backtrace (Reduced):
#6  QUrl::QUrl (this=0x7fffe4142330, other=...) at io/qurl.cpp:4174
#7  0x00007f19e06cc079 in KWebWallet::KWebWalletPrivate::saveDataToCache (this=0x1086a80, key=...) at /var/tmp/portage/kde-base/kdelibs-4.6.4/work/kdelibs-4.6.4/kdewebkit/kwebwallet.cpp:209
#8  0x00007f19e06ccf5b in KWebWallet::saveFormDataToCache (this=0x10869c0, key=<value optimized out>) at /var/tmp/portage/kde-base/kdelibs-4.6.4/work/kdelibs-4.6.4/kdewebkit/kwebwallet.cpp:549
#9  0x00007f19e06cd4f9 in KWebWallet::qt_metacall (this=0x10869c0, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fffe41424a0) at /var/tmp/portage/kde-base/kdelibs-4.6.4/work/kdelibs-4.6.4_build/kdewebkit/kwebwallet.moc:92
[...]
#11 0x00007f19d5c00365 in KDEPrivate::PasswordBar::saveFormDataAccepted (this=<value optimized out>, _t1=<value optimized out>) at /var/tmp/portage/kde-misc/kwebkitpart-0.9.6/work/kwebkitpart-0.9.6_build/src/passwordbar.moc:108
Comment 3 Tommi Tervo 2011-09-01 12:20:45 UTC
*** Bug 281150 has been marked as a duplicate of this bug. ***
Comment 4 Dario Andres 2011-10-02 13:17:54 UTC
[Comment from a bug report cleaner]
There is a rekonq report with a similar crash which is probably related to this: bug 278926.
Regards
Comment 5 Dawit Alemayehu 2011-10-04 16:30:48 UTC
*** Bug 278926 has been marked as a duplicate of this bug. ***
Comment 6 Dawit Alemayehu 2011-10-06 20:20:13 UTC
Git commit 86255d1e1fe388282fd776927ec7ff074d5d9c6d by Dawit Alemayehu.
Committed on 04/10/2011 at 18:36.
Pushed by adawit into branch 'KDE/4.7'.

Do not attempt to save passwords into the wallet when the key supplied does
not exist.

BUG: 270209
FIXED-IN: 4.7.3

M  +5    -0    kdewebkit/kwebwallet.cpp

http://commits.kde.org/kdelibs/86255d1e1fe388282fd776927ec7ff074d5d9c6d
Comment 7 Christoph Feck 2011-10-21 08:43:07 UTC
*** Bug 284573 has been marked as a duplicate of this bug. ***
Comment 8 Lamarque V. Souza 2011-11-10 23:47:18 UTC
*** Bug 286287 has been marked as a duplicate of this bug. ***