Do not attempt to save passwords into the wallet when the key supplied does not exist.

BUG: 270209
FIXED-IN: 4.7.3